fix button highlight by click on mobile devices

--- a/style.css
+++ b/style.css
@@ -127,4 +127,8 @@ button:focus {
 	.result {
 		margin-bottom: 50px;
 	}
+
+	button {
+		cursor: none;
+	}
 }
